--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,9 +1,9 @@
 branch-defaults:
   master:
-    environment: testserver-dev
+    environment: woo-env
     group_suffix: null
 global:
-  application_name: testserver
+  application_name: woo
   default_ec2_keyname: alansan
   default_platform: PHP 5.6
   default_region: eu-central-1
